// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > ArrowDownIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Arrow Down
    </title>
    <path
      d="M21.886 5.536A1.002 1.002 0 0021 5H3a1.002 1.002 0 00-.822 1.569l9 13a.998.998 0 001.644 0l9-13a.998.998 0 00.064-1.033zM12 17.243L4.908 7h14.184L12 17.243z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ArrowUpIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Arrow Up
    </title>
    <path
      d="M3 19h18a1.002 1.002 0 00.823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 003 19zm9-12.243L19.092 17H4.908L12 6.757z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > BackIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 512 512"
    width="1em"
  >
    <title>
      Back
    </title>
    <path
      d="M328 112L184 256l144 144"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="48"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > CancelIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 470 1000"
    width="1em"
  >
    <title>
      Cancel
    </title>
    <path
      d="M452 656c12 12 18 26.333 18 43s-6 31-18 43c-12 10.667-26.333 16-43 16s-31-5.333-43-16L234 590 102 742c-12 10.667-26.333 16-43 16s-31-5.333-43-16C5.333 730 0 715.667 0 699s5.333-31 16-43l138-156L16 342C5.333 330 0 315.667 0 299s5.333-31 16-43c12-10.667 26.333-16 43-16s31 5.333 43 16l132 152 132-152c12-10.667 26.333-16 43-16s31 5.333 43 16c12 12 18 26.333 18 43s-6 31-18 43L314 500l138 156"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > CheckMarkIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 512 512"
    width="1em"
  >
    <title>
      Check Mark
    </title>
    <path
      d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7l233.4-233.3c12.5-12.5 32.8-12.5 45.3 0z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > CheckboxCheckedIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Checkbox Checked
    </title>
    <path
      d="M14 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zM7 12.414L3.293 8.707l1.414-1.414L7 9.586l4.793-4.793 1.414 1.414L7 12.414z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > CheckboxUncheckedIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Checkbox Unchecked
    </title>
    <path
      d="M14 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zm0 14H2V2h12v12z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ChevronDownIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Down
    </title>
    <path
      d="M1.553 6.776a.5.5 0 01.67-.223L8 9.44l5.776-2.888a.5.5 0 11.448.894l-6 3a.5.5 0 01-.448 0l-6-3a.5.5 0 01-.223-.67z"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ChevronLeftIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Left
    </title>
    <path
      d="M9.224 1.553a.5.5 0 01.223.67L6.56 8l2.888 5.776a.5.5 0 11-.894.448l-3-6a.5.5 0 010-.448l3-6a.5.5 0 01.67-.223z"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ChevronRightIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Right
    </title>
    <path
      d="M6.776 1.553a.5.5 0 01.671.223l3 6a.5.5 0 010 .448l-3 6a.5.5 0 11-.894-.448L9.44 8 6.553 2.224a.5.5 0 01.223-.671z"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ChevronUpIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Up
    </title>
    <path
      d="M7.776 5.553a.5.5 0 01.448 0l6 3a.5.5 0 11-.448.894L8 6.56 2.224 9.447a.5.5 0 11-.448-.894l6-3z"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ClearIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Clear
    </title>
    <defs>
      <style />
    </defs>
    <path
      d="M899.1 869.6l-53-305.6H864c14.4 0 26-11.6 26-26V346c0-14.4-11.6-26-26-26H618V138c0-14.4-11.6-26-26-26H432c-14.4 0-26 11.6-26 26v182H160c-14.4 0-26 11.6-26 26v192c0 14.4 11.6 26 26 26h17.9l-53 305.6c-.3 1.5-.4 3-.4 4.4 0 14.4 11.6 26 26 26h723c1.5 0 3-.1 4.4-.4 14.2-2.4 23.7-15.9 21.2-30zM204 390h272V182h72v208h272v104H204V390zm468 440V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H416V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H202.8l45.1-260H776l45.1 260H672z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > CopyIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="1em"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Copy
    </title>
    <path
      d="M11 9 H20 A2 2 0 0 1 22 11 V20 A2 2 0 0 1 20 22 H11 A2 2 0 0 1 9 20 V11 A2 2 0 0 1 11 9 z"
    />
    <path
      d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > CutIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    height="1em"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cut
    </title>
    <path
      d="M0 0h24v24H0z"
      stroke="none"
    />
    <path
      d="M10 17 A3 3 0 0 1 7 20 A3 3 0 0 1 4 17 A3 3 0 0 1 10 17 z"
    />
    <path
      d="M20 17 A3 3 0 0 1 17 20 A3 3 0 0 1 14 17 A3 3 0 0 1 20 17 z"
    />
    <path
      d="M9.15 14.85L18 4M6 4l8.85 10.85"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > DeleteIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Delete
    </title>
    <path
      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > DownloadIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Download
    </title>
    <path
      d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ErrorIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Error
    </title>
    <path
      d="M11 7h2v7h-2zm0 8h2v2h-2z"
    />
    <path
      d="M21.707 7.293l-5-5A.996.996 0 0016 2H8a.996.996 0 00-.707.293l-5 5A.996.996 0 002 8v8c0 .266.105.52.293.707l5 5A.996.996 0 008 22h8c.266 0 .52-.105.707-.293l5-5A.996.996 0 0022 16V8a.996.996 0 00-.293-.707zM20 15.586L15.586 20H8.414L4 15.586V8.414L8.414 4h7.172L20 8.414v7.172z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ForwardIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 512 512"
    width="1em"
  >
    <title>
      Forward
    </title>
    <path
      d="M184 112l144 144-144 144"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="48"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > GraduateIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 448 512"
    width="1em"
  >
    <title>
      Learn
    </title>
    <path
      d="M219.3.5c3.1-.6 6.3-.6 9.4 0l200 40C439.9 42.7 448 52.6 448 64s-8.1 21.3-19.3 23.5L352 102.9V160c0 70.7-57.3 128-128 128S96 230.7 96 160v-57.1l-48-9.6v65.1l15.7 78.4c.9 4.7-.3 9.6-3.3 13.3S52.8 256 48 256H16c-4.8 0-9.3-2.1-12.4-5.9s-4.3-8.6-3.3-13.3L16 158.4V86.6C6.5 83.3 0 74.3 0 64c0-11.4 8.1-21.3 19.3-23.5l200-40zM111.9 327.7c10.5-3.4 21.8.4 29.4 8.5l71 75.5c6.3 6.7 17 6.7 23.3 0l71-75.5c7.6-8.1 18.9-11.9 29.4-8.5 65 20.9 112 81.7 112 153.6 0 17-13.8 30.7-30.7 30.7H30.7C13.8 512 0 498.2 0 481.3c0-71.9 47-132.7 111.9-153.6z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > HelpIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 512 512"
    width="1em"
  >
    <title>
      Help
    </title>
    <path
      d="M414.39 97.61A224 224 0 1097.61 414.39 224 224 0 10414.39 97.61zM192.13 260.18a64 64 0 1159.69 59.69 64.07 64.07 0 01-59.69-59.69zm240-66.64l-96.37 5.84a4.06 4.06 0 01-3.44-1.59 96 96 0 00-18.07-18.07 4.06 4.06 0 01-1.59-3.44l5.84-96.37a4 4 0 015.42-3.51A193 193 0 01435.6 188.12a4 4 0 01-3.51 5.42zM193.54 79.91l5.84 96.37a4.06 4.06 0 01-1.59 3.44 96 96 0 00-18.07 18.07 4.06 4.06 0 01-3.44 1.59l-96.37-5.84a4 4 0 01-3.51-5.42A193 193 0 01188.12 76.4a4 4 0 015.42 3.51zM79.91 318.46l96.37-5.84a4.06 4.06 0 013.44 1.59 96 96 0 0018.07 18.07 4.06 4.06 0 011.59 3.44l-5.84 96.37a4 4 0 01-5.42 3.51A193 193 0 0176.4 323.88a4 4 0 013.51-5.42zm238.55 113.63l-5.84-96.37a4.06 4.06 0 011.59-3.44 96 96 0 0018.07-18.07 4.06 4.06 0 013.44-1.59l96.37 5.84a4 4 0 013.51 5.42A193 193 0 01323.88 435.6a4 4 0 01-5.42-3.51z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > HideIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Hide
    </title>
    <path
      d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 011.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 000 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 000-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558l-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0112 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > HomeIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Home
    </title>
    <path
      d="M946.5 505 560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > InfoIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Info
    </title>
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
    />
    <path
      d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > LoginIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Login
    </title>
    <path
      d="M521.7 82c-152.5-.4-286.7 78.5-363.4 197.7-3.4 5.3.4 12.3 6.7 12.3h70.3c4.8 0 9.3-2.1 12.3-5.8 7-8.5 14.5-16.7 22.4-24.5 32.6-32.5 70.5-58.1 112.7-75.9 43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 32.6 32.5 58.1 70.4 76 112.5C865.7 417.8 875 464.1 875 512c0 47.9-9.4 94.2-27.8 137.8-17.8 42.1-43.4 80-76 112.5s-70.5 58.1-112.7 75.9A352.8 352.8 0 0 1 520.6 866c-47.9 0-94.3-9.4-137.9-27.8A353.84 353.84 0 0 1 270 762.3c-7.9-7.9-15.3-16.1-22.4-24.5-3-3.7-7.6-5.8-12.3-5.8H165c-6.3 0-10.2 7-6.7 12.3C234.9 863.2 368.5 942 520.6 942c236.2 0 428-190.1 430.4-425.6C953.4 277.1 761.3 82.6 521.7 82zM395.02 624v-76h-314c-4.4 0-8-3.6-8-8v-56c0-4.4 3.6-8 8-8h314v-76c0-6.7 7.8-10.5 13-6.3l141.9 112a8 8 0 0 1 0 12.6l-141.9 112c-5.2 4.1-13 .4-13-6.3z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > PasteIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Paste
    </title>
    <path
      d="M20 11V5c0-1.103-.897-2-2-2h-3a1 1 0 00-1-1H8a1 1 0 00-1 1H4c-1.103 0-2 .897-2 2v13c0 1.103.897 2 2 2h7c0 1.103.897 2 2 2h7c1.103 0 2-.897 2-2v-7c0-1.103-.897-2-2-2zm-9 2v5H4V5h3v2h8V5h3v6h-5c-1.103 0-2 .897-2 2zm2 7v-7h7l.001 7H13z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > QuestionIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 512 512"
    width="1em"
  >
    <title>
      Question
    </title>
    <path
      d="M256 80a176 176 0 10176 176A176 176 0 00256 80z"
      fill="none"
      stroke="currentColor"
      stroke-miterlimit="10"
      stroke-width="32"
    />
    <path
      d="M200 202.29s.84-17.5 19.57-32.57C230.68 160.77 244 158.18 256 158c10.93-.14 20.69 1.67 26.53 4.45 10 4.76 29.47 16.38 29.47 41.09 0 26-17 37.81-36.37 50.8S251 281.43 251 296"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-miterlimit="10"
      stroke-width="28"
    />
    <path
      d="M270 348 A20 20 0 0 1 250 368 A20 20 0 0 1 230 348 A20 20 0 0 1 270 348 z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > RemoveIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 512 512"
    width="1em"
  >
    <title>
      Remove
    </title>
    <path
      d="M135.19 390.14a28.79 28.79 0 0021.68 9.86h246.26A29 29 0 00432 371.13V140.87A29 29 0 00403.13 112H156.87a28.84 28.84 0 00-21.67 9.84v0L46.33 256l88.86 134.11z"
      fill="none"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="32"
    />
    <path
      d="M336.67 192.33L206.66 322.34M336.67 322.34L206.66 192.33M336.67 192.33L206.66 322.34M336.67 322.34L206.66 192.33"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="32"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > SaveIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <title>
      Save
    </title>
    <path
      d="M893.3 293.3L730.7 130.7c-7.5-7.5-16.7-13-26.7-16V112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V338.5c0-17-6.7-33.2-18.7-45.2zM384 184h256v104H384V184zm456 656H184V184h136v136c0 17.7 14.3 32 32 32h320c17.7 0 32-14.3 32-32V205.8l136 136V840zM512 442c-79.5 0-144 64.5-144 144s64.5 144 144 144 144-64.5 144-144-64.5-144-144-144zm0 224c-44.2 0-80-35.8-80-80s35.8-80 80-80 80 35.8 80 80-35.8 80-80 80z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > ShowIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Show
    </title>
    <path
      d="M12 9a3.02 3.02 0 00-3 3c0 1.642 1.358 3 3 3 1.641 0 3-1.358 3-3 0-1.641-1.359-3-3-3z"
    />
    <path
      d="M12 5c-7.633 0-9.927 6.617-9.948 6.684L1.946 12l.105.316C2.073 12.383 4.367 19 12 19s9.927-6.617 9.948-6.684l.106-.316-.105-.316C21.927 11.617 19.633 5 12 5zm0 12c-5.351 0-7.424-3.846-7.926-5C4.578 10.842 6.652 7 12 7c5.351 0 7.424 3.846 7.926 5-.504 1.158-2.578 5-7.926 5z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > UploadIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 16 16"
    width="1em"
  >
    <title>
      Upload
    </title>
    <path
      d="M.5 9.9a.5.5 0 01.5.5v2.5a1 1 0 001 1h12a1 1 0 001-1v-2.5a.5.5 0 011 0v2.5a2 2 0 01-2 2H2a2 2 0 01-2-2v-2.5a.5.5 0 01.5-.5z"
    />
    <path
      d="M7.646 1.146a.5.5 0 01.708 0l3 3a.5.5 0 01-.708.708L8.5 2.707V11.5a.5.5 0 01-1 0V2.707L5.354 4.854a.5.5 0 11-.708-.708l3-3z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon > WarningIcon matched the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    role="img"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Warning
    </title>
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M4 20v-6a8 8 0 1116 0v6h1v2H3v-2h1zm2 0h12v-6a6 6 0 10-12 0v6zm5-18h2v3h-2V2zm8.778 2.808l1.414 1.414-2.12 2.121-1.415-1.414 2.121-2.121zM2.808 6.222l1.414-1.414 2.121 2.12L4.93 8.344 2.808 6.222zM7 14a5 5 0 015-5v2a3 3 0 00-3 3H7z"
    />
  </svg>
</DocumentFragment>
`;
